welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not enough arguments for method remplirTableau: (t: Array[java.awt.Color])Unit.
Unspecified value parameter t.
  remplirTableau();
                ^